2005-02-26 18:04  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/Additions/GNUstepGUI/GSServicesManager.h: Include the
	NSMenuItem.h header instead of forward declaring the NSMenuItem
	protocol.

2005-02-23  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSColor.h (-alternateSelectedControlColor,
	-alternateSelectedControlTextColor,
	-secondarySelectedControlColor,
	controlAlternatingRowBackgroundColors): New MacOSX system colour methods.
	* Source/NSColor.m (-alternateSelectedControlColor,
	-alternateSelectedControlTextColor,
	-secondarySelectedControlColor,
	controlAlternatingRowBackgroundColors): Implemented the new
	methods.
	(initSystemColors): Added default values for new system coloure methods

2005-02-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-initWithCoder):
	* Source/NSButtonCell.m (-initWithCoder):
	* Source/NSBrowser.m (-initWithCoder):
	Small improvements on keyed decoding of flags.

2005-02-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSavePanel.m (-_setDefaultDirectory): New method to get
	default directory from user defaults (NSDefaultOpenDirectory).
	(-_resetDefaults): Use it for setting of default directory.
	(-_setupForDirectory:file:): Use the new method here as well if no
	path is provided. Cleaned up this method.
	(-cancel:) Don't clean up filename and set directory to current.
	(-ok:) Don't set _OKButtonPressed.
	* Source/NSOpenPanel.m (-ok:): Don't set _OKButtonPressed.
	(-_setupForDirectory:file:): Removed code duplicating super class
	implementation. 
	This fixes most of bug #7900.

2005-02-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopupButton.m (-mouseDown:): Moved code from here ...
	* Source/NSPopupButtonCell.m
	(-trackMouse:inRect:ofView:untilMouseUp:): ... to here. This fixes
	bug #9824.

2005-02-14  Richard Frith-Macdoanld <rfm@gnu.org>

	* Source/GSTitleView.m (-mouseDown:): Post an
	NSWindowDidMoveNotification at end of method if window was dragged.
	Fixes bug #11906
