@@ -1,3 +1,10 @@
+2005-02-27 Adrian Robert <arobert@cogsci.ucsd.edu>
+
+	* Source/NSApplication.m (-runModalForWindow:) Clarify gsdoc
+	explaining why we don't follow Apple docs here.  (Corrects gsdoc
+	from change on 2005-01-26, which itself documented a code change on
+	2005-01-18.)
+
 2005-02-26 18:04  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Headers/Additions/GNUstepGUI/GSServicesManager.h: Include the
